# castor

./: .gitignore  Cargo.toml  Makefile  README.md
data/: Castor.desktop  castor_settings.toml.example
src/: #text_viewer.glade#  absolute.rs  absolute_url.rs  bookmarks.rs  castor.glade  client.rs  colors.rs  content.rs  dialog.rs  draw.rs  gui.rs  history.rs  link.rs  main.rs  parser.rs  protocols.rs  settings.rs  tags.rs  text_viewer.glade  text_viewer.glade~
src/finger/: client.rs
src/gemini/: absolute.rs  certificate.rs  client.rs  link.rs  mod.rs  parser.rs
src/gopher/: absolute.rs  client.rs  link.rs  parser.rs
