[package]
name = "castor"
version = "0.8.12"
authors = ["Julien Blanchard <julien@typed-hole.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "*"
gdk-pixbuf = "*"
gio = "*"
glib = "*"
glib-sys = "*"
pango = "*"
pango-sys = "*"
open = "*"
regex = "*"
native-tls = { git = "https://github.com/julienXX/rust-native-tls", branch="master" }
openssl = { git = "https://github.com/julienXX/rust-openssl", branch="master" }
openssl-sys = { git = "https://github.com/julienXX/rust-openssl", branch="master" }
url = "*"
tempfile = "*"
dirs = "*"
lazy_static = "*"
ansi-parser = "0.6.5"
percent-encoding="*"
toml="*"
serde="*"
serde_derive="*"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_18"]