[package]
name = "castor"
version = "0.8.15"
authors = ["Julien Blanchard <julien@typed-hole.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gdk = "*"
gdk-pixbuf = "*"
gio = "*"
glib = "*"
glib-sys = "*"
pango = "*"
pango-sys = "*"
open = "*"
regex = "*"
linkify = "*"
native-tls = "*"
openssl = "*"
url = "*"
tempfile = "*"
dirs = "*"
lazy_static = "*"
ansi-parser = "0.6.5"
percent-encoding="*"
toml="*"
serde="*"
serde_derive="*"
textwrap="*"

[dependencies.gtk]
version = "0.8.0"
features = ["v3_18"]